--- a/,github/workflows/3-open-pr-master.yml
+++ b/,github/workflows/3-open-pr-master.yml
@@ -1,4 +1,4 @@
-name: Create PR for the master
+name: Create PR for the main
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
       - closed
 
 jobs:
-  create-pr-master:
+  create-pr-main:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,11 +15,11 @@ jobs:
         with:
           fetch-depth: 0 # This guarantees the complete clone with all branches
 
-      - name: Create PR for the Master
+      - name: Create PR for the Main
         run: |
           if [ "${{ github.event.pull_request.base.ref }}" == "develop" ]; then
             git pull origin develop
-            gh pr create --base master --head develop --title "Merge from develop to master" --body "Automatically generated PR by GitHub Actions."
+            gh pr create --base main --head develop --title "Merge from develop to main" --body "Automatically generated PR by GitHub Actions."
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
