--- a/.github/workflows/2-open-pr.yml
+++ b/.github/workflows/2-open-pr.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@1.0.0
     
     - name: Create pull request
-      uses: thomaseizinger/create-pull-request@master
+      uses: thomaseizinger/create-pull-request@main
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         head: ${{ github.ref }}
