--- a/.github/workflows/2-open-pr.yml
+++ b/.github/workflows/2-open-pr.yml
@@ -1,24 +1,23 @@
-name: Create PR
-on: 
-  push:
-    branches: 
-      - "feature/*"
+name: Create PR to Main
+
+on:
   workflow_run:
-    workflows: [".NET Core Desktop"]
+    workflows: [".NET Core Desktop"] # Substitua pelo nome do primeiro workflow
     types:
       - completed
 
 jobs:
-  create-pr-on-push:
+  create_pr_to_main:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Create pull request
-      uses: peter-evans/create-pull-request@v3
-      with:
-        title: "An automatically created PR!"
-        token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
-        base: develop
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: "Automatically created PR to main"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+          base: develop
