--- a/.github/workflows/2-open-pr.yml
+++ b/.github/workflows/2-open-pr.yml
@@ -1,19 +1,22 @@
 name: Create PR to Main
 
 on:
-  workflow_run: 
-    workflows: [".NET Core Desktop"] # Substitua pelo nome do primeiro workflow
+  workflow_run:
+    workflows: [".NET Core Desktop"]
     types:
       - completed
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
   create_pr_to_main:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
@@ -21,9 +24,3 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
           base: develop
-
-  dummy_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Dummy step
-        run: echo "This is a dummy job."
