--- a/.github/workflows/2-open-pr.yml
+++ b/.github/workflows/2-open-pr.yml
@@ -1,20 +1,21 @@
-name: "Create PR"
-on: 
+name: Create PR to Develop
+
+on:
   push:
-    branches: [ "feature/*" ]
-    types:
-      - completed
+    branches:
+      - 'feature/*'
 
 jobs:
-  create-pr-on-push:
+  create_pr_on_push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@1.0.0
-    
-    - name: Create pull request
-      uses: thomaseizinger/create-pull-request@master
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        head: ${{ github.ref }}
-        base: develop
-        title: "An automatically created PR!"
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          head: ${{ github.ref }}  # A branch de onde o PR será criado
+          base: develop  # A branch para onde o PR será criado
+          title: "Automatically created PR from feature branch"
